# awesome-llm-apps

mcp_ai_agents/github_mcp_agent/: Cargo.toml  README.md
mcp_ai_agents/github_mcp_agent/src/: agent.rs  docker.rs  lib.rs  main.rs  mcp.rs  openai.rs
